# discord-ip-notifier

./: Cargo.toml  readme.md
src/: main.rs
